specification/specs/x_pack/security/api_key/invalidate_api_key/InvalidateApiKeyResponse.ts
class InvalidateApiKeyResponse extends ResponseBase {
  error_count: integer
  error_details: ErrorCause[]
  invalidated_api_keys: string[]
  previously_invalidated_api_keys: string[]
}
